// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextField Default 1`] = `
<div
<<<<<<< HEAD:src/components/TextField/__snapshots__/story.storyshot
  className="sc-eNQAEJ ajvZf"
=======
  className="sc-kkGfuU ikROjB"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220):src/components/TextField/formatters/withCurrencyFormatting/__snapshots__/story.storyshot
  disabled={false}
  onBlurCapture={[Function]}
  onClick={[Function]}
  onFocusCapture={[Function]}
>
  <div
    className="sc-hMqMXs jGzyVm"
    disabled={false}
  >
    <span
      className="sc-kEYyzF eTfXvk"
    >
      Username
    </span>
  </div>
  <input
    className="sc-eNQAEJ kadEUO"
    disabled={false}
    id={undefined}
    name="firstname"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <div
    className="sc-hMqMXs jGzyVm"
    disabled={false}
  >
    <span
      className="sc-kEYyzF eTfXvk"
    >
      $
    </span>
  </div>
</div>
`;

exports[`Storyshots TextField With Currency formatting 1`] = `
Array [
  <div
<<<<<<< HEAD:src/components/TextField/__snapshots__/story.storyshot
    className="sc-eNQAEJ ajvZf"
=======
    className="sc-kkGfuU ikROjB"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220):src/components/TextField/formatters/withCurrencyFormatting/__snapshots__/story.storyshot
    disabled={false}
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-hMqMXs jGzyVm"
      disabled={false}
    >
      <span
        className="sc-kEYyzF eTfXvk"
      >
        $
      </span>
    </div>
    <input
      className="sc-eNQAEJ kadEUO"
      disabled={false}
      id={undefined}
      name="first name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="10.00"
    />
  </div>,
  <div
    className="sc-bwzfXH gKGSfm"
  >
    <p
<<<<<<< HEAD:src/components/TextField/__snapshots__/story.storyshot
      className="sc-bxivhb bfQmQc"
=======
      className="sc-bxivhb bgphtb"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228):src/components/TextField/formatters/withCurrencyFormatting/__snapshots__/story.storyshot
    >
      <span
        className="sc-htpNat frObKr"
      >
        <span
          className="sc-htpNat hKonPW"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat frObKr"
        >
          The reported value of this field is: 10
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Feedback 1`] = `
Array [
  <div
<<<<<<< HEAD:src/components/TextField/__snapshots__/story.storyshot
    className="sc-eNQAEJ ajvZf"
=======
    className="sc-kkGfuU ikROjB"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220):src/components/TextField/formatters/withCurrencyFormatting/__snapshots__/story.storyshot
    disabled={false}
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-hMqMXs jGzyVm"
      disabled={false}
    >
      <span
        className="sc-kEYyzF eTfXvk"
      >
        Username
      </span>
    </div>
    <input
      className="sc-eNQAEJ kadEUO"
      disabled={false}
      id={undefined}
      name="firstname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <div
      className="sc-hMqMXs jGzyVm"
      disabled={false}
    >
      <span
        className="sc-kEYyzF eTfXvk"
      >
        $
      </span>
    </div>
  </div>,
  <div
    className="sc-bwzfXH gKGSfm"
  >
    <p
<<<<<<< HEAD:src/components/TextField/__snapshots__/story.storyshot
      className="sc-bxivhb gWsGB"
=======
      className="sc-bxivhb jNLkvd"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228):src/components/TextField/formatters/withCurrencyFormatting/__snapshots__/story.storyshot
    >
      <span
        className="sc-htpNat frObKr"
      >
        <span
          className="sc-htpNat hKonPW"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat frObKr"
        >
          This is a feedback message
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Number formatting 1`] = `
<div
<<<<<<< HEAD:src/components/TextField/__snapshots__/story.storyshot
  className="sc-eNQAEJ ajvZf"
=======
  className="sc-kkGfuU ikROjB"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220):src/components/TextField/formatters/withCurrencyFormatting/__snapshots__/story.storyshot
  disabled={undefined}
  onBlurCapture={[Function]}
  onClick={[Function]}
  onFocusCapture={[Function]}
>
  <input
    className="sc-eNQAEJ kadEUO"
    disabled={undefined}
    id={undefined}
    name="min value"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="number"
    value="10"
  />
</div>
`;
